# crafting_interpreters

./: .gitmodules  ASTGenerator.ts  CMakeLists.txt  CPlayground  README.md  advent.sh  all.sh  clox.sh  dateOutput.txt  example.lox  generate_ast.sh  output.txt  rebuild_all.sh  test_interp.sh  test_output.txt  test_perf.sh
lox/: example.clox  example.lox  math.lox  perf.lox
scripts/: ASTGenerator.ts  all.sh  generate_ast.sh  rebuild_all.sh
src/: Binary.cpp  Datastructures.cpp  FileUtils.cpp  FileUtils.h  Main.cpp  Trie.cpp  TrieImpl.cpp  Vector.cpp  Vector.h
src/advent/: 1.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  CMakeLists.txt
src/c/: 1_introduction.cpp  2_3_types.cpp  2_types.cpp  5_pointers.cpp  6_structs.cpp  7_io.cpp  cprogramming.h
src/clox/: CMakeLists.txt  chunk.c  chunk.h  clox.c  common.h  compiler.c  compiler.h  debug.c  debug.h  hashmap.c  hashmap.h  memory.c  memory.h  scanner.c  scanner.h  token.h  value.c  value.h  vm.c  vm.h
src/cpp/: 1_introduction.cpp  2_abstractions.cpp  4_containers.cpp  cpp_book.h
src/cpplox/: Analyzer.cpp  Analyzer.h  CMakeLists.txt  CPPLox.cpp  CPPLox.h  Environment.cpp  Environment.h  Expr.cpp  Expr.h  ExprPrint.cpp  ExprPrint.h  Interpreter.cpp  Interpreter.h  LoxCallable.h  LoxClass.cpp  LoxClass.h  LoxError.h  LoxFunction.cpp  LoxFunction.h  LoxInstance.cpp  LoxInstance.h  LoxParser.cpp  LoxParser.h  LoxValue.cpp  LoxValue.h  Main.cpp  Token.cpp  Token.h  TokenScanner.cpp  TokenScanner.h
src/cpplox/ast/: ast.h
src/kernels/: kernel.cl
src/ocl/: ocl.cpp  ocl.h
src/window/: Window.cpp  Window.h
